fixed block spacing on the main element

--- a/src/App.css
+++ b/src/App.css
@@ -102,6 +102,7 @@ h3, h4 {
 @media (max-width: 41.875rem) {
 	.main {
 		flex-direction: column;
+		margin-block: 1.5rem;
 	}
 }
 
